<resources>
    <string name="app_name">Animal Adoption</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="question_adoption">Which Animal Would You like to Adopt?</string>
    <string name="adoption_congrats">Congratulations!!! You have successfully adopted an animal!</string>
    <string name="adoption_address">You can pick up your animal from Pet Social. 11 Fort York Blvd, Toronto, ON M5V 3Y7</string>
    <string name="adoption">Adoption</string>
    <string name="category_dog">Dogs</string>
    <string name="category_cat">Cats</string>
    <string name="category_reptile">Reptiles</string>
    <string name="category_bird">Birds</string>
    <string name="title_adoption">Animal Adoption</string>
    <string name="start_button">Start</string>
    <string name="btn_next">Next</string>
    <string name="btn_next2">Next</string>
    <string name="btn_next3">Next</string>
    <string name="btn_next4">Next</string>
    <string name="btn_next5">Next</string>
    <string name="btn_next6">Next</string>
    <string name="btn_next7">Next</string>
    <string name="btn_next8">Next</string>
    <string name="btn_next9">Next</string>
    <string name="btn_next10">Next</string>
    <string name="btn_next11">Next</string>
    <string name="btn_next12">Next</string>
    <string name="btn_next13">Next</string>
    <string name="btn_next14">Next</string>
    <string name="play_end">End</string>
    <string name="title_activity_animal_selection">AnimalSelectionActivity</string>
    <string name="category_cat1">Sally</string>
    <string name="category_cat2">Misty</string>
    <string name="category_cat3">Sam</string>
    <string name="category_cat4">Lucy</string>
    <string name="category_reptile1">Karl</string>
    <string name="category_reptile2">Earl</string>
    <string name="category_dog1">Max</string>
    <string name="category_dog2">Charlie</string>
    <string name="category_dog3">Buddy</string>
    <string name="category_dog4">Rex</string>
    <string name="category_bird1">Sunny</string>
    <string name="category_bird2">Tweety</string>
    <string name="category_bird3">Tiki</string>
    <string name="category_bird4">Coco</string>
    <string name="app_makers">Haasher A. Aneri P. Margie P.</string>
    <string name="description1">Smart, Active, Loving, Easy-going</string>
    <string name="description2">Smart, Active, Noisy, Hungry-Alot</string>
    <string name="description3">Hungry-Alot, Violent with strangers, Cute, Loving, Protective</string>
    <string name="description4">Lazy, Smart, Protective</string>
    <string name="description5">Cute, Loving, Protective</string>
    <string name="description6">Fast, Strong, Loving, Hungry-Alot, Cute, Noisy, Smart, Trainable</string>
</resources>
