<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:gravity="center_vertical"
>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="332dp"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_text_view"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_weight="0.25"
            android:textColor="@color/colorBlack"
            android:text="@string/question_adoption" />

        <Button
            android:layout_width="105dp"
            android:layout_height="70dp"
            android:text="@string/category_cat"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnCat"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:onClick="onCreate"
            android:clickable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:text="@string/category_reptile"
                android:id="@+id/btnReptile"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:onClick="onCreate" />

            <Button
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:text="@string/category_bird"
                android:id="@+id/btnBird"
                android:textColor="@color/colorOrange"
                android:textSize="15dp"
                android:onClick="onCreate" />

        </LinearLayout>

        <Button
            android:layout_width="105dp"
            android:layout_height="70dp"
            android:text="@string/category_dog"
            android:id="@+id/btnDog"
            android:textColor="@color/colorGreen"
            android:textSize="15dp"
            android:onClick="onCreate" />

    </LinearLayout>

</LinearLayout>