<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AnimalAdoption"
    android:orientation="vertical"
    tools:showIn="@layout/activity_animaladoption"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="bottom|center"
        android:id="@+id/AppName"
        android:textColor="@color/colorBlack"
        android:text="@string/title_adoption"
        android:layout_weight="0.21" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Extra_space"
        android:padding="24dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_weight="0.30" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:text="@string/start_button"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:drawableRight="@drawable/black36dp"
        android:drawablePadding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extra_space"
        android:padding="24dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_weight="0.30" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appMakers"
        android:padding="24dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_weight="0.09"
        android:textColor="@color/colorBlack"
        android:text="@string/app_makers" />

</LinearLayout>
