<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:gravity="center_vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:id="@+id/question_text_view"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_weight="0.19"
            android:textColor="@color/colorBlack"
            android:text="@string/category_dog4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="188dp"
                android:layout_height="161dp"
                android:id="@+id/dogView4"
                android:src="@drawable/dog" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/extraSpace8"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:layout_weight="0.18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/discription9"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:layout_weight="0.27"
            android:text="@string/description6" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:id="@+id/btn_next9"
                android:textColor="@color/colorPink"
                android:textSize="15dp"
                android:text="@string/btn_next9" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>